chore: satisfy final phase 5 quality checks